added gmail smtp email sender client

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,10 +18,10 @@ spring:
     show-sql: true
 
   mail:
-    host: localhost
-    port: 1025
-    username: hello
-    password: hello
+    host: smtp.gmail.com
+    port: 587
+    username: darotudeen@gmail.com
+    password: imltmaxchlxqdqeu
 
     properties:
       mail:
