Should not filter artisans and confirm endpoint for authentication

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,8 @@ spring:
           connectiontimeout: 5000
           timeout: 3000
           writetimeout: 5000
+
+
+jwt:
+  header: Authorization
+  secret: secretkey123
