--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+server:
+  error:
+    include-binding-errors: always
+    include-message: always
+  port: 8080
 spring:
   datasource:
     username: ispaireqhaivvb
