--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   error:
     include-binding-errors: always
     include-message: always
-  port: 8080
+  port: ${PORT:8080}
 spring:
   datasource:
     username: ispaireqhaivvb
