changed cladsafrica credentials

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -20,8 +20,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: darotudeen@gmail.com
-    password: imltmaxchlxqdqeu
+    username: cladsafrica@gmail.com
+    password: CladsAfricaNaira
 
     properties:
       mail:
