--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: cladsafrica@gmail.com
-    password: Youngster1$
+    password: CladsAfricaNaira
 
     properties:
       mail:
