added add client feature and update client feature

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server:
   error:
     include-binding-errors: always
     include-message: always
+    include-stacktrace: on_param
 spring:
   datasource:
     username: postgres
