--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,8 @@ spring:
     username: postgres
     password: password
     url: jdbc:postgresql://localhost:5432/clads
+    hikari:
+      auto-commit: false
 
   jpa:
     hibernate:
