--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,6 +44,8 @@ spring:
 jwt:
   header: Authorization
   secret: secretkey123
-
+ably:
+  apiKey: ei07cg.g3KPQQ:Xj8QeTGYAe2izc8J
+  channel: cladchat
 host:
   base: http://localhost:8080/api/v1/
