fixed serialization error for unknown object, added ably socket feature for chatting

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -13,6 +13,7 @@ spring:
   jackson:
     serialization:
       fail-on-empty-beans: false
+      write_dates_as_timestamps: false
 
   jpa:
     hibernate:
