-mFixed google mail authentication error

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: cladsafrica@gmail.com
-    password: CladsAfricaNaira
+    password: tmzlpnwefsmfyksf
 
     properties:
       mail:
