--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -33,7 +33,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: cladsafrica@gmail.com
-    password: CladsAfricaNaira
+    password: tmzlpnwefsmfyksf
 
     properties:
       mail:
